--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>COS30045 Capstone - Andrew Gray 102112347</title>
         <meta name="description" content="COS30045 Capstone Project">
         <meta name="author" content="Andrew Gray 102112347">
         <meta name=keywords content="HTML,CSS,D3">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
         <script src="https://d3js.org.d3.v5.min.js"></script>
-        <script src=""></script>
+        <script src="script.js"></script>
     </head>
     <body>
+        <h1>Carbon Emissions versus Vehicles in Australia</h1>
+
+        <p id="svgtoedit"></p>
+
+        <footer>Andrew Gray 102112347<br>
+        Created for Data Visualisation COS30045</footer>
 
         
     </body>
