--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Andrew Gray 102112347">
         <meta name=keywords content="HTML,CSS,D3">
         <link rel="stylesheet" href="styles.css">
-        <script src="https://d3js.org.d3.v5.min.js"></script>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="script.js"></script>
     </head>
     <body>
@@ -15,7 +15,7 @@
 
         <p id="svgtoedit"></p>
 
-        <footer>Andrew Gray 102112347<br>
+        <footer>Sem 1 2020: Andrew Gray 102112347<br>
         Created for Data Visualisation COS30045</footer>
 
         
