--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </head>
     <body>
         <h1>Carbon Emissions versus Vehicles in Australia</h1>
+        <p>The following visualisation depicts the trend between Carbon Emissions and Motor Vehicle Population in Australia
+            between 2002 and 2014.
+        </p>
 
         <p id="svgtoedit"></p>
 
