--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <h1>Carbon Emissions versus Vehicles in Australia</h1>
+        <h1>Carbon Emissions versus Australian Vehicle Population</h1>
         <p>The following visualisation depicts the trend between Carbon Emissions and Motor Vehicle Population in Australia
             between 2002 and 2014.
         </p>
