fixes to the html head

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
     <head>
-        <meta charset="utf-8">
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">        
         <title>COS30045 Capstone - Andrew Gray 102112347</title>
         <meta name="description" content="COS30045 Capstone Project">
         <meta name="author" content="Andrew Gray 102112347">
-        <meta name=keywords content="HTML,CSS,D3">
-        <link rel="stylesheet" href="styles.css">
+        <meta name="keywords" content="HTML,CSS,D3">
+        <link href="styles.css" rel="stylesheet"  type="text/css" />
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="script.js"></script>
     </head>
