--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             between 2002 and 2014.
         </p>
 
-        <p id="svgtoedit"></p>
+        <div id="svgtoedit"></div>
 
         <footer>Sem 1 2020: Andrew Gray 102112347<br>
         Created for Data Visualisation COS30045</footer>
