+added information,edited form

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         <p>The following visualisation depicts the trend between Carbon Emissions and Motor Vehicle Population in Australia
             between 2002 and 2014. <br/>
             Hovering over each point reveals the information relating to each data point, including what year, and its exact information relating to emissions and vehicle
-            in Australia.
+            in Australia.<br/>
+            <b>An important note: </b> Hybrid vehicle technology became popular and affordable at the turn of the 2010s and beyond.
 
-            <div class="comparisondiv">
+            <div class="comparisonForm" id="compareform">
                 <form onsubmit="compareInit();return false">
                     <fieldset>
                         <legend>Compare Data Points</legend>
